--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </div>
     <table  id ="table2" style="width: 100%">
         <tr>
-            <td><a href="https://freewebsitetemplates.com/preview/frozenyogurtshop/product.html"><img class="class2" src="file:///C:/Users/Hammad%20Chohan/Downloads/ice-cream.svg"></a></td>
-            <td><a href="https://freewebsitetemplates.com/preview/frozenyogurtshop/about.html"><img class="class2" src="file:///C:/Users/Hammad%20Chohan/Downloads/script.svg"></a></td>
-            <td><a href="https://freewebsitetemplates.com/preview/frozenyogurtshop/product.html"><img class="class2" src="file:///C:/Users/Hammad%20Chohan/Downloads/yummy.svg"></a></td>
-            <td><a href="https://freewebsitetemplates.com/preview/frozenyogurtshop/contact.html"><img class="class2" src="file:///C:/Users/Hammad%20Chohan/Downloads/placeholder.svg"></a></td>
+            <td><a href=""><img class="class2" src="file:///C:/Users/Hammad%20Chohan/Downloads/ice-cream.svg"></a></td>
+            <td><a href=""><img class="class2" src="file:///C:/Users/Hammad%20Chohan/Downloads/script.svg"></a></td>
+            <td><a href=""><img class="class2" src="file:///C:/Users/Hammad%20Chohan/Downloads/yummy.svg"></a></td>
+            <td><a href=""><img class="class2" src="file:///C:/Users/Hammad%20Chohan/Downloads/placeholder.svg"></a></td>
         </tr>
         <tr>
             <td class="r2">PRODUCTS</td>
